<resources>
    <string name="app_name">AllWeather</string>

    <string name="time_now"><![CDATA[Now]]></string>
    <string name="time_minutes"><![CDATA[%@min]]></string>
    <string name="time_hours"><![CDATA[%@h]]></string>
    <string name="time_weeks"><![CDATA[%@w ]]></string>
    <string name="time_months"><![CDATA[%@M]]></string>
    <string name="time_days"><![CDATA[%@d]]></string>
    <string name="time_years"><![CDATA[%@y]]></string>

    <string name="edit_asset_title"><![CDATA[자산 수정하기]]></string>
    <string name="create_asset_title"><![CDATA[자산 추가하기]]></string>

    <string name="edit_asset_type_title"><![CDATA[자산군 수정하기]]></string>
    <string name="create_asset_type_title"><![CDATA[자산군 추가하기]]></string>

    <string name="common_name"><![CDATA[이름]]></string>
    <string name="common_eval_amount"><![CDATA[평가 금액]]></string>
    <string name="common_type"><![CDATA[구분]]></string>
    <string name="common_weight"><![CDATA[비중]]></string>
    <string name="common_add"><![CDATA[추가하기]]></string>
    <string name="common_edit"><![CDATA[수정하기]]></string>
    <string name="common_delete"><![CDATA[삭제하기]]></string>
    <string name="common_won"><![CDATA[%s원]]></string>
    <string name="common_man"><![CDATA[%s만]]></string>
    <string name="common_uk"><![CDATA[%s억]]></string>
    <string name="common_money_default"><![CDATA[%s]]></string>
    <string name="common_won_unit"><![CDATA[원]]></string>
    <string name="common_cancel"><![CDATA[취소]]></string>
    <string name="common_confirm"><![CDATA[확인]]></string>

    <string name="asset_add"><![CDATA[종목 추가]]></string>
    <string name="asset_edit"><![CDATA[종목 수정]]></string>
    <string name="asset_delete"><![CDATA[종목 삭제]]></string>

    <string name="common_delete_subtitle"><![CDATA[정말 삭제 하시겠습니까?]]></string>

    <string name="asset_name_hint"><![CDATA[- 종목 이름을 입력해주세요 ex) 삼성전자]]></string>
    <string name="asset_amount_hint"><![CDATA[- 종목 평가 금액을 입력해주세요 ex) 1,000,000원 ]]></string>
    <string name="asset_type_hint"><![CDATA[- 자산군을 선택해주세요]]></string>

    <string name="asset_type_editor_name_hint"><![CDATA[자산군 이름을 입력해주세요 ex) 주식]]></string>
    <string name="asset_type_editor_weight_hint"><![CDATA[자산군 포트폴리오 비중을 입력해주세요]]></string>

    <string name="account_name_hint"><![CDATA[- 계좌 이름을 입력해주세요]]></string>
    <string name="account_type_hint"><![CDATA[- 자산군 비율을 설정해주세요]]></string>

    <string name="account_asset_type_add"><![CDATA[자산군을 추가해보세요]]></string>

    <string name="account_add"><![CDATA[계좌를 추가해보세요]]></string>
    <string name="account_selected"><![CDATA[(선택됨)]]></string>
    <string name="account_score_80_100"><![CDATA[분산투자를 아주 잘하고 계시군요!]]></string>
    <string name="account_score_60_80"><![CDATA[분산투자를 잘하고 계시군요!]]></string>
    <string name="account_score_40_60"><![CDATA[분산투자 조정이 필요해 보입니다]]></string>
    <string name="account_score_20_40"><![CDATA[분산투자 조정이 매우 필요해보입니다]]></string>
    <string name="account_score_0_20"><![CDATA[분산투자 재점검이 필요합니다]]></string>

    <string name="type_stock"><![CDATA[주식]]></string>
    <string name="type_short_bond"><![CDATA[단기채권]]></string>
    <string name="type_long_bond"><![CDATA[장기채권]]></string>
    <string name="type_gold"><![CDATA[금]]></string>
    <string name="type_commodity"><![CDATA[원자재]]></string>

    <string name="detail_current_weight"><![CDATA[현재비중]]></string>
    <string name="detail_current_amount"><![CDATA[현재금액]]></string>
    <string name="detail_target_weight"><![CDATA[목표비중]]></string>
    <string name="detail_target_amount"><![CDATA[목표금액]]></string>

    <string name="detail_need_to_raise"><![CDATA[+%s원 증액 해야합니다]]></string>
    <string name="detail_need_to_down"><![CDATA[-%s원 감액 해야합니다]]></string>

    <string name="main_tab_bottom_assets"><![CDATA[종목]]></string>
    <string name="main_tab_bottom_graph"><![CDATA[그래프]]></string>
    <string name="main_tab_bottom_manage"><![CDATA[관리]]></string>

</resources>