<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="35dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_editor_dialog_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <kwony.allweather.common.TitleBar
            android:id="@+id/fr_asset_editor_titlebar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintTop_toTopOf="parent"
            app:drawable_left="@drawable/ic_close"
            app:drawable_left_margin="12dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="14dp"
            app:layout_constraintTop_toBottomOf="@id/fr_asset_editor_titlebar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/fr_asset_editor_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/fr_asset_editor_name_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_name"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="#000" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    android:background="@drawable/shape_editor_dialog_input_background">

                    <EditText
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="8dp"
                        android:id="@+id/fr_asset_editor_name_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:hint="@string/asset_name_hint"
                        android:textSize="13sp"
                        android:background="@android:color/transparent"
                        app:layout_constraintTop_toBottomOf="@id/fr_asset_editor_name_desc"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/fr_asset_editor_amount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/fr_asset_editor_name_layout">

                <TextView
                    android:id="@+id/fr_asset_editor_amount_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_eval_amount"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="#000" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    android:background="@drawable/shape_editor_dialog_input_background">

                    <EditText
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="8dp"
                        android:id="@+id/fr_asset_editor_amount_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:hint="@string/asset_amount_hint"
                        android:textSize="13sp"
                        android:background="@android:color/transparent"
                        app:layout_constraintTop_toBottomOf="@id/fr_asset_editor_name_desc"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/fr_asset_editor_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/fr_asset_editor_amount_layout">

                <TextView
                    android:id="@+id/fr_asset_editor_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_type"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/asset_type_hint"
                    android:textSize="12sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_editor_dialog_input_background">

                    <RadioButton
                        android:text="국내주식"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>