<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fr_maintab_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fr_maintab_bottom"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fr_maintab_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/fr_maintab_assets"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/fr_maintab_assets_name"
                android:textColor="#141414"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/main_tab_bottom_assets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/fr_maintab_graph"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/fr_maintab_graph_name"
                android:textColor="#989898"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/main_tab_bottom_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/fr_maintab_manage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/fr_maintab_manage_name"
                android:textColor="#989898"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/main_tab_bottom_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>