<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="35dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_editor_dialog_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <kwony.allweather.common.TitleBar
            android:id="@+id/fr_account_editor_titlebar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:drawable_left="@drawable/ic_close"
            app:drawable_left_margin="12dp"
            app:drawable_right="@drawable/ic_save"
            app:drawable_right_margin="12dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fr_account_editor_titlebar">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/fr_account_editor_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/fr_account_editor_name_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/common_name"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/shape_editor_dialog_input_background"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/fr_account_editor_name_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="8dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/account_name_hint"
                            android:maxLines="1"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/fr_account_editor_name_desc" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/fr_account_editor_type_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/fr_account_editor_name_layout">

                    <TextView
                        android:id="@+id/fr_account_editor_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/common_type"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/account_type_hint"
                        android:textSize="12sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fr_account_editor_type_rv"
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>