<?xml version="1.0" encoding="utf-8"?>
<com.quarkworks.roundedframelayout.RoundedFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cornerRadius="5dp"
    android:layout_marginTop="6dp"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/vh_detail_asset_type_name"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#141414"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="장기채권" />

        <TableLayout
            android:id="@+id/vh_detail_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,3"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/vh_detail_asset_type_change_amount">

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="#787878"
                    android:text="@string/detail_current_weight"
                    tools:text="현재비중" />

                <TextView
                    android:id="@+id/vh_detail_asset_type_weight"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="#787878"
                    tools:text="40%" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="#787878"
                    android:text="@string/detail_target_weight"
                    tools:text="목표비중" />

                <TextView
                    android:id="@+id/vh_detail_asset_type_target_weight"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="#787878"
                    tools:text="70%" />
            </TableRow>
            <TableRow
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="#787878"
                    android:text="@string/detail_current_amount"
                    tools:text="현재금액" />
                <TextView
                    android:id="@+id/vh_detail_asset_type_amount"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="#787878"
                    tools:text="3,400,000원" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="#787878"
                    android:text="@string/detail_target_amount"
                    tools:text="목표금액" />
                <TextView
                    android:id="@+id/vh_detail_asset_type_target_amount"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:textColor="#787878"
                    tools:text="4,502,000원" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/vh_detail_asset_type_change_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:layout_marginTop="3dp"
            android:textColor="#141414"
            app:layout_constraintStart_toStartOf="@id/vh_detail_asset_type_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vh_detail_asset_type_name"
            tools:textColor="@android:color/holo_red_dark"
            tools:text="+1,102,000 원 증액해야 합니다"/>
        
        <ImageView
            android:id="@+id/vh_detail_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/vh_detail_table"
            app:layout_constraintEnd_toStartOf="@id/vh_detail_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/vh_detail_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_delete"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/vh_detail_table"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.quarkworks.roundedframelayout.RoundedFrameLayout>